OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.1.2 (2018-02-??)
------------------
- PS: FatalThrowableError: Access to undeclared static property: Acumulus::$module_version

5.1.1 (2018-02-07)
------------------
- ALL: Ernstige fout in Container bij creatie Communicator object.
- MA: getBillingAddress() kan leeg zijn en tot een warning/foutmelding leiden.
- MA: Ondersteun multi-currency door alleen nog maar de Base velden te gebruiken.

5.1.0 (2018-02-07)
------------------
- MA2: Ondersteuning toegevoegd voor betaalkosten via de paycheckout en sisow
  betaalproviders.
- WC: Moved support for other plugins to a separate class.
- ALL: Maak (waar mogelijk) onderscheid tussen 0% btw en btw-vrij.
- ALL: Als een factuur niet verzonden wordt omdat het totaal 0 is, werdt
 'verzenden tegengehouden door het event "AcumulusInvoiceCreated' gelogd.

5.0.5 (2018-01-25)
------------------
- composer.json: Message from packagist: siel/acumulus failed to update, invalid
  composer.json data:  License "GPL-3.0" is a deprecated SPDX license
  identifier, use "GPL-3.0-only" or "GPL-3.0-or-later" instead.
- PSR-1: use true, false and null instead of TRUE, FALSE and NULL.

5.0.4 (2018-01-22)
------------------
- WC: Eigen oplossing voor WooCommerce bug #18357 ging de fout in.

5.0.3 (2018-01-19)
------------------
- ALL: Backslashes worden niet goed verstuurd naar Acumulus waardoor met name
  Nieuwe regels en tabs niet werken in de velden beschrijving en notities.
- WC: Oude folder libraries was nog niet verwijderd uit svn.

5.0.2 (2018-01-18)
------------------
- ALL: originalInvoiceSource als bron van veldverwijzingen werkte niet.
- OC23/OC3: Ondersteuning voor quick_status_updater module.