@@ -19,6 +19,7 @@ WC3 = WooCommerce 3 (WordPress)
 
 5.1.2 (2018-02-??)
 ------------------
+- PS: Ondersteuning voor andere currencies.
 - PS: FatalThrowableError: Access to undeclared static property: Acumulus::$module_version
 
 5.1.1 (2018-02-07)
